Fix mobile navbar text wrapping with nowrap and smaller font

--- a/css/hamburguesaestilos.css
+++ b/css/hamburguesaestilos.css
@@ -163,6 +163,21 @@
 
     .menu ul li a{
         font-size: 15px;
+        white-space: nowrap;
+    }
+}
+
+@media screen and (max-width: 480px){
+    .menu ul li a{
+        font-size: 12px;
+    }
+
+    .menu ul li{
+        margin-left: 10px;
+    }
+
+    .logo img{
+        width: 44px;
     }
 }
 
